2024-09-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3460.c.in,
	  support/regression/tests/sizeof.c.in,
	  support/regression/tests/bug-2854.c:
	  Modify some testcases for implicit conversion between integers and pointers, part of bug #3770.

2024-09-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  support/valdiag/tests/bug-3773.c:
	  Improve diagnostics on out-of-range absolute addresses.
	* sim/ucsim/src/sims/stm8.src/stm8.cc:
	  Fix stm8 program counter width.
	* src/SDCCgenconstprop.cc,
	  support/regression/tests/bug-3778.c,
	  .version:
	  Fix bug #3778.

2024-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Optimize shift of 8-bit values, part of RFE #939.

2024-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix an unsafe read being used even without --allow-unsafe-read.

2024-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp:
	  Do not compile with older, known-to-be-broken boost.

2024-08-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCval.c:
	  Fix bug #3745.

2024-08-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/Makefile.in: fixed distclean for cases dir

2024-08-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix label at end of compound statement.

2024-08-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c:
	  Fix label defore declaration.
	* src/pdk/gen.c:
	  Fix a pdk code generation issue, part of bug #3697.

2024-08-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdccconf_in.h:
	  Regenerate file via autoheader to fix --disable-f8-port.
	* support/regression/tests/bug-3745.c.in:
	  Test more qualifiers.

2024-08-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable a test for pdk15, where it fails due to lack of memory.
	* src/SDCCast.c,